--- a/src/App.css
+++ b/src/App.css
@@ -55,10 +55,10 @@ html, body, main {
 body {
   display: flex;
   flex-direction: column;
-  font-family: "Ubuntu", sans-serif, cursive;
+  font-family: 'Recursive', sans-serif;
   font-size: 100%;
-  background-color: black;
-  color: #46505A;
+  background-color: rgba(55, 88, 115, 1);
+  color: white;
 
 }
 
@@ -67,6 +67,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 5px;
 }
 
 
@@ -78,9 +79,9 @@ header {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background-color: black;
+  background-color: rgba(55, 88, 115, 1);
   font-size: 1.5em;
-  color: #46505A;
+  color: white;
   height: 10%;
   width: 100%;
   padding-top: 1em;
@@ -105,4 +106,9 @@ header {
 .fa-spinner {
   font-size: 150px;
   vertical-align: middle;
+}
+
+fa-anchor{
+  font-size: 20px;
+  color: orangered;
 }
